static/style.css
/* ----------------------------- General Styling */
body {
    font-family: "Helvetica Neue", Arial, sans-serif;
    font-weight: 300; 
    /* background-color: #2F4F4F; */
    /* background-color: #191970; */
    /* background-color: #4682B4; current! */
    background-color: #5F9EA0;
    color: #FFFAF0;

    font-family: 'Titillium Web', sans-serif;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box; 
}

/* ----------------------------- navbar styling */
a {
    text-decoration: none;
}

a:hover {
    color: #663399;
}

.whole-head {
    /* background: #FA8072; */
    background-color: #191970;
    position: relative;

    /* display: flex;
    align-items: center;
    justify-content: center; */
}

#navbar {
    /* background: #FF6347; */
    /* background: #FA8072; */
    background-color: #191970;
    /* height: 10vh; */
    height: 40px;
    margin-left: 30%;
    margin-right: 30%;
    display: flex;
    align-items: center;
    justify-content: space-around;
    /* justify-content: flex-end; */
}

.navbar-item {
    color: #FFFAF0;
    font-size: 20px;
    display: flex;
    align-items: center;  
    justify-content: center;  
    font-size: large;
}

/* ------------------------- resume */
.resume-container {
    margin-left: 20%;
    margin-right: 20%;
    margin-top: 20px;

    position: absolute;
    bottom: -100%;
    animation: comeUpFromBottom 1s forwards;
}

.resume-container li {
    font-size: 20px;
}

.resume-list-header {
    font-size: 25px;
}

.resume-header {
    text-align: center;
}

#resume-name {
    font-size: 50px;
}

.contact-info {
    font-size: 25px;
}

.resume-text {
    font-size: 20px;
}

.resume-list {
    margin-left: 40px;
}

/* ------------------------- home */



#container-main-home {
    display: flex;
    flex-direction: column;

    margin-top: 150px;
}

#header {
    text-align: center;
    font-size: 40px;
    font-family: 'Orbitron', sans-serif;
    margin-left: 5%;
    margin-right: 5%;

    position: relative;
    left: -100%;
    animation: enterFromLeft 1s forwards;
}

#column-container {
    display: flex;
    flex-direction: row;
}

.col {
    flex: 1;
    padding: 5%;
}

.left {
    text-align: center;
}

.right {
    font-size: 20px;
}

.home-links {
    /* color: #FA8072; */
    color: #191970;
}


/* ------------------------- project */

#container-main-project {
    display: flex;
    /* flex-direction: row; */
    justify-content: space-between;
    align-items: flex-start;

    margin-left: 10%;
    margin-right: 10%;
}

/* #orbit-pic {
    flex: 1;
    padding: 5px;
    /* height: 40px; 
    height: auto;
} */
#orbit-pic {
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 5%;
}

#orbit-pic img {
    width: 200px;
    height: auto;
}

.project-link {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 80%;
    /* height: calc(100vh - 100px); */
    height: 75vh;
    margin-bottom: 20px;
}

#project-header-container {
    margin-top: 50px;
    text-align: right;
    flex: 1;
}

.pdf-viewer {
    display: none;
}

.pdf-container {
    display: flex;
    flex-direction: column;
}


/* ------------------------- animations */
@keyframes enterFromLeft {
    from {
      left: -100%;
    }
    to {
      left: 0;
    }
  }


  @keyframes comeUpFromBottom {
    from {
      top: 100%;
    }
    to {
      /* bottom: 0; */
      top: 30px;
    }
  }


/* phone sizing adjustments */ 
  @media only screen and (max-width: 800px) {
    /* ------------------------- navbar */
    #navbar {
        margin-left: 10%;
        margin-right: 10%;
    }

    .navbar-item {
        font-size: 20px;
    }

    /* ------------------------- home */
    #container-main-home {
        margin-top: 10px;
        /* margin-left: 5%;
        margin-right: 5%; */
    }

    #column-container {
        flex-direction: column;
    }


    /* ------------------------- resume */
    .email {
        font-size: 16px;
    }

    li {
        font-size: larger;
    }

    .resume-list {
        margin-left: 40px;
    }

    .resume-container {
        margin-left: 5%;
        margin-right: 5%;
        /* position: relative; */
    }

    .resume-text {
        font-size: larger;
    }

    .resume-list-header {
        font-size: x-large;
    }

    /* ------------------------- project */
    .project-link {
        display: none;
    }

    .pdf-viewer {
        font-size: 30px;
        text-decoration: none;
        display: inline-block;
        background-color: white;
        color: #191970;
        border: 1px solid #191970;
        transition: background-color 0.3s, color 0.3s;
        border-radius: 10px;
        padding: 5px;
        margin-top: 20px;
    }

    .pdf-container {
        text-align: center;
        margin-left: 5%;
        margin-right: 5%;
        
    }

    #container-main-project {
        margin-left: 2%;
        margin-right: 2%;
    }    

    #orbit-pic img {
        width: 100px;
        height: auto;
    }


  }

